--- a/Ui/Ui.Desktop/Properties/Resources.resx
+++ b/Ui/Ui.Desktop/Properties/Resources.resx
@@ -130,19 +130,19 @@
   <data name="installing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\installing.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bg_paper" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\backgrounds\bg-paper.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Notification" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\sounds\notification.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="bg_parchment" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\backgrounds\bg-parchment.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="roll_1_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\sounds\roll-1-1.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Always_Together" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\fonts\always together.otf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="roll_1_1_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\sounds\roll-1-1-1.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="DHIZARFONT" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\fonts\dhizarfont.otf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="roll_20_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\sounds\roll-20-20.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="NeverSayNever" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\fonts\neversaynever.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="roll_20_20_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\sounds\roll-20-20-20 .mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
