--- a/Ui/Ui.Desktop/Properties/Resources.resx
+++ b/Ui/Ui.Desktop/Properties/Resources.resx
@@ -134,15 +134,15 @@
     <value>..\resources\sounds\notification.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="roll_1_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\sounds\roll-1-1.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\resources\sounds\roll-1-1.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="roll_1_1_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\sounds\roll-1-1-1.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\resources\sounds\roll-1-1-1.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="roll_20_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\sounds\roll-20-20.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\resources\sounds\roll-20-20.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="roll_20_20_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\sounds\roll-20-20-20 .mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\resources\sounds\roll-20-20-20 .wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
