--- a/Ui/Ui.Desktop/Properties/Resources.resx
+++ b/Ui/Ui.Desktop/Properties/Resources.resx
@@ -127,4 +127,10 @@
   <data name="PlayerIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PlayerIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="roll_blind" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\roll_blind.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="roll_public" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\roll_public.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
