--- a/Ui/Ui.Desktop/Properties/Resources.resx
+++ b/Ui/Ui.Desktop/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="NatureIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NatureIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="PaperDoll" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PaperDoll.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="PlayerIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PlayerIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
